name:                   lpeutils
version:                0.1
synopsis:               LPE for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Djurre van der Wal

maintainer:             djurrevanderwal@gmail.com
copyright:              TNO?
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      ModelIdFactory
                      , ProcIdFactory
                      , VarFactory
                      , ValFactory
                      , MonadAny
                      , Pairs
                      , ChanFactory
                      , KnuthShuffle
                      , ConcatEither
                      , UntilFixedPoint
                      , SetUnions
                      , SortFactory
                      , ActOfferFactory
                      , MapDebug
                      , IntercalateMap

  other-modules:      

  ghc-options:        -Werror -Wall -O2 -optc-O3 -optc-ffast-math

  build-depends:        base
                      , containers
                      , mtl
                      , text
                      , behave
                      , behaveenv
                      , coreenv
                      , deepseq
                      , random
                      , solve
                      , defs
                      , bexpr
                      , valexpr
                      , value

  default-language:     Haskell2010

