name:                   regexrepr
version:                0.2.1.0
synopsis:               Regular Expression Representations
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      RegexRepr
  
  other-modules:        RegexAlex
                      , RegexPosixHappy
                      , RegexSMTHappy
  
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math
  
  build-tools:          alex
                      , happy

  build-depends:        array
                      , base
                      , text
                      
  default-language:     Haskell2010

test-suite regexrepr-test
  type:                 exitcode-stdio-1.0
  
  hs-source-dirs:       test

  main-is:              TestMain.hs

  other-modules:        TestXsd2Posix
                      , TestXsd2Smt

  build-depends:        base
                      , HUnit
                      , text

                      , regexrepr

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language:     Haskell2010
