name:                   sbehave
version:                0.2.1.0
synopsis:               Symbolic Behaviour Expressions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
                      , Ramon Janssen
maintainer:          
                      , ramonjanssen@cs.ru.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      SBehave
                      , SExpand

  other-modules:        Equiv
                      , Next
                      , Reduce
                      , Subst
                      , Unfold

  ghc-options:        -Werror -O2 -optc-O3 -optc-ffast-math -Wall
  
  build-depends:        base
                      , containers
                      , extra
                      , mtl
                      , text

                      , sbehavedefs
                      , sbehaveenv
                      , coreenv
                      , defs
                      , solve
                      , solvedefs
                      , tree
                      , valexpr

                      
  default-language:     Haskell2010
  
test-suite behave-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src
                      , test
  
  main-is:              TestMain.hs
  
  other-modules:        Equiv
                      , Expand
                      , Next
                      , Reduce
                      , Subst
                      , Unfold
                      , TestBExpr
                      , TestFuncContent
                      , TestHelperFuncContent
                      , TestProcessBehaviour

                      

  ghc-options:       -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000
  
  build-depends:       base
                     , containers
                     , extra
                     , mtl
                     , text
                     , HUnit
                     , MissingH
                     
                     , sbehavedefs
                     , sbehaveenv
                     , coreenv
                     , defs
                     , front
                     , solve
                     , solvedefs
                     , tree
                     , valexpr
                     
  default-language:    Haskell2010
