name:                   server
version:                0.2.1.0
synopsis:               Server for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math
  hs-source-dirs:      src
  exposed-modules:     CmdLineParser
  build-depends:       base
                     , optparse-applicative
                     , network

                     , coreenv
  default-language: Haskell2010

executable txsserver
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -Wall

  hs-source-dirs:       src
  main-is:              TxsServer.hs
  other-modules:
                        ToProcdef
                      , CmdLineParser
                      , TxsServerConfig

  build-depends:        base
                      , containers
                      , deepseq
                      , network
                      , mtl
                      , MissingH
                      , optparse-applicative
                      , directory
                      , yaml
                      , directory
                      , filepath
                      , aeson
                      , extra
                      , bifunctors
                      , text

                      , cnect
                      , core
                      , coreenv
                      , defs
                      , front
                      , serverenv
                      , value

  default-language:     Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CmdLineParserSpec
  build-depends:       base
                     , hspec
                     , server
                     , optparse-applicative
                     , QuickCheck
                     , network

                     , coreenv
  ghc-options:       -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010