name:                   serverenv
version:                0.1.7.0
synopsis:               ServerEnv for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:
                        EnvServer
                      , IfServer
                      , ParamServer
                      
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -Wall

  build-depends:        base
                      , containers
                      , network
                      , mtl
                      , MissingH
                      
                      , coreenv
                      , defs

  default-language:     Haskell2010
