name:                   solve
version:                0.2.1.0
synopsis:               SMT Solver
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      FreeVar
                      , RandPartition
                      , RandTrueBins
                      , RandIncrementChoice
                      , RegexXSD2SMT
                      , SMT
                      , SMTString
                      , Solve

  other-modules:        SMTInternal
                      , SMT2TXS
                      , SMTAlex
                      , SMTHappy
                      , SMTStringAlex
                      , SMTStringHappy
                      , SolveRandParam
                      , TXS2SMT

  build-depends:        array
                      , base
                      , containers
                      , mtl
                      , process
                      , random
                      , random-shuffle
                      , regex-tdfa
                      , time
                      , MissingH
                      , text

                      , defs
                      , value
                      , solvedefs
                      , lexregexxsd

  build-tools:          alex
                      , happy

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math 
  
  default-language:     Haskell2010


test-suite SmtSolver-WhiteBox
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
                      , src
                                            
  main-is:              TestMainWhiteBox.hs

  other-modules:        HelperFuncDefToSMT
                      , HelperToSMT
                      , HelperVexprToSMT

                      , TestExternal
                      , TestFuncDefToSMT
                      , TestRecursiveFunction
                      , TestSMTCount
                      , TestSMTValue
                      , TestSortDefToSMT
                      , TestVexprToSMT
                      , TestSolvers

                      , FreeVar
                      , RandIncrementChoice
                      , RandPartition
                      , RandTrueBins
                      , RegexXSD2SMT
                      , SMT
                      , SMT2TXS
                      , SMTAlex
                      , SMTHappy
                      , SMTInternal
                      , SMTString
                      , SMTStringAlex
                      , SMTStringHappy
                      , SolveRandParam
                      , TXS2SMT

  build-depends:        array
                      , base
                      , containers
                      , mtl
                      , process
                      , regex-tdfa
                      , time
                      , HUnit
                      , MissingH
                      , defs
                      , random
                      , random-shuffle
                      , solvedefs
                      , value
                      , text

                      , coreenv
                      , lexregexxsd

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language:     Haskell2010

test-suite SmtSolver-BlackBox
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
                                            
  main-is:              TestMainBlackBox.hs

  other-modules:        TestConstraint
                      , TestMultipleInstances
                      , TestPushPop
                      , TestSolvers
                      , TestXSD2SMT

  build-depends:        base
                      , containers
                      , mtl
                      , process
                      , regex-tdfa
                      , HUnit
                      , defs
                      , solve
                      , solvedefs
                      , value
                      , text

                      , coreenv

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language:     Haskell2010
