name:                   solvedefs
version:                0.2.1.0
synopsis:               SMT Solver
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
                      , src/SolveDefs

  exposed-modules:      SolveDefs
                      , SMTData
                      , SolveDefs.Params
                      
  build-depends:        base
                      , containers
                      , mtl
                      , process
                      , text
                      -- torxakis packages
                      , defs
                      
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math 
  
  default-language:     Haskell2010