name:           sort
version:        0.1.0.0
synopsis:       Sort definitions
license:        BSD3
license-file:   license.txt
author:         Pierre van de Laar
              , Kerem Ispirli
maintainer:     pierre.vandelaar@tno.nl
              , kerem.ispirli@tno.nl
copyright:      TNO
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Id
                      , Ref
                      , Sort
                      , SortOf

  build-depends:        base
                      , containers
                      , deepseq
                      , text
                      , Unique

  ghc-options:          -Werror -Wall -O2 -optc-O3 -optc-ffast-math
  default-language:     Haskell2010


test-suite sort-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  
  main-is:              TestMain.hs
  
  other-modules:        TestADT

  ghc-options:       -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000
  
  build-depends:       base
                     , containers
                     , HUnit
                     , sort

  default-language:    Haskell2010
