name:                   testsel
version:                0.2.1.0
synopsis:               Test Selection for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
                      , Petra van den Bos
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      NComp
                      
  other-modules:

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -Wall
  
  build-depends:        base
                      , containers
                      , mtl
                      , text

                      , coreenv
                      , defs
                      
  default-language:     Haskell2010
