name:                   tree
version:                0.2.1.0
synopsis:               Tree monad structures
license:                BSD3
license-file:           license.txt
author:                 Ramon Janssen
maintainer:             ramonjanssen@cs.ru.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      TreeMonad
  
  other-modules:        TreeZipper

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -Wall
  
  build-depends:        base,
                        containers,
                        transformers
                      
  default-language:     Haskell2010
