name:                ui
version:             0.2.1.0
synopsis:            TorXakis UI
description:         Please see README.md
homepage:            
license:             BSD3
license-file:        license.txt
author:              Jan Tretmans
                   , Pierre van de Laar
maintainer:          
                   , pierre.vandelaar@tno.nl
copyright:           TNO
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable txsui
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -Wall
  
  hs-source-dirs:       src
  main-is:              UI.hs
  other-modules:        TxsHelp
                      , UIenv
                      , UIif
  build-depends:        base
                      , containers
                      , mtl
                      , network
                      , process
                      , time
                      , MissingH
  default-language:     Haskell2010