name:                   valexpr
version:                0.0.1.0
synopsis:               Value Expressions
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      ConstDefs
                      , FreeMonoidX
                      , FuncDef
                      , FuncId
                      , Identifier
                      , Name
                      , Product
                      , RegexXSD2Posix
                      , StandardSortRefs
                      , Sum
                      , ValExpr
                      , Variable
                      , VarId

  other-modules:        ValExprDefs
                      , ValExprImpls
                      , ValExprImplsExtension

  ghc-options:         -Werror -Wall -O2 -optc-O3 -optc-ffast-math -Wall

  build-tools:          happy

  build-depends:        array
                      , base
                      , containers
                      , deepseq
                      , regex-tdfa
                      , text

                      , lexregexxsd
                      , sort
                      
  default-language:     Haskell2010
                    

test-suite defs-BlackBox
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     
  main-is:             Spec.hs
  
  other-modules:       GenProduct
                     , ValExprSpec
                     , ProductSpec
                     , FreeMonoidXSpec
                     , XSD2PosixSpec
                       
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -Wall
  
  build-depends:       base
                     , hspec
                     , hspec-contrib
                     , ieee754
                     , text
                     , HUnit
                     , QuickCheck
                     
                     , valexpr
  default-language:    Haskell2010