name:                   valexpr
version:                0.0.1.0
synopsis:               Value Expressions
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Constant
                      , CstrDef
                      , CstrId
                      , FreeMonoidX
                      , FuncDef
                      , FuncId
                      , Name
                      , Product
                      , RegexXSD2Posix
                      , SortDef
                      , SortId
                      , SortOf
                      , Sum
                      , ValExpr
                      , Variable
                      , VarId
                      , Id

  other-modules:        ConstantAlex
                      , ConstantHappy
                      , ValExprDefs
                      , ValExprImpls
                      , ValExprImplsExtension

  ghc-options:         -Wall -Werror -O2 -optc-O3 -optc-ffast-math

  build-tools:          happy
                      , alex

  build-depends:        array
                      , base
                      , containers
                      , deepseq
                      , lens
                      , regex-tdfa
                      , text

                      , lexregexxsd
                      
  default-language:     Haskell2010

test-suite valexpr-BlackBox
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs

  other-modules:       ConstantGen
                     , ConstantSpec
                     , FreeMonoidXSpec
                     , ProductGen
                     , ProductSpec
                     , ValExprSpec
                     , XSD2PosixSpec

  ghc-options:         -Wall -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , hspec
                     , hspec-contrib
                     , lens
                     , ieee754
                     , text
                     , HUnit
                     , QuickCheck
                     
                     , valexpr

  default-language:    Haskell2010