name:                   value
version:                0.2.1.0
synopsis:               Value Expressions
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Eval
                      , RegexAlex       
                      , RegexPosixHappy      
  
  ghc-options:         -O2 -optc-O3 -optc-ffast-math
  
  build-tools:          alex
                      , happy
                      
  build-depends:        array
                      , base
                      , containers
                      , deepseq
                      , mtl
                      , regex-tdfa
                      , MissingH
                      
                      , defs
                      , env
                      , front
                      
  default-language:     Haskell2010
  
test-suite Value-WhiteBox
  type:                 exitcode-stdio-1.0
  
  hs-source-dirs:       src
                      , test
                                            
  main-is:              TestMainWhiteBox.hs
  
  other-modules:        RegexAlex
                      , RegexPosixHappy      
  
                      , TestRegexPosix
  
  build-tools:          alex
                      , happy
                                          
  build-depends:        array
                      , base
                      , regex-tdfa
                      , HUnit
                  
  ghc-options:         -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language:     Haskell2010
