name:                   value
version:                0.2.1.0
synopsis:               Value Expressions
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Eval
  
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math
  
  build-depends:        array
                      , base
                      , containers
                      , deepseq
                      , mtl
                      , regex-tdfa
                      , MissingH
                      , text
                      
                      , behaveenv
                      , defs
                      , coreenv
                      , front
                      
  default-language:     Haskell2010