name:                   value
version:                0.2.1.0
synopsis:               Value Expressions
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Eval
  
  ghc-options:         -Wall -Werror -O2 -optc-O3 -optc-ffast-math
  
  build-depends:        base
                      , containers
                      , deepseq
                      , mtl
                      , regex-tdfa
                      , text
                      , MissingH
                      
                      , behaveenv
                      , defs
                      , coreenv
                      , front
                      , valexpr
                      , txs-compiler
                      
  default-language:     Haskell2010