-- note: needs stack version > 1.3.2 see https://github.com/commercialhaskell/stack/issues/2862

name:                   environment
version:                0.2.1.0
synopsis:               Test Of Environment for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

  
test-suite environment
  type:                 exitcode-stdio-1.0
                                            
  main-is:              TestMain.hs
  
  other-modules:        TestPreludeRead
                      , TestTextXMLExpatTree
                      
  build-depends:        array
                      , base
                      , bytestring
                      , containers
                      , hexpat
                      , HUnit
                  
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language:     Haskell2010