name:                sqatt
version:             0.1
synopsis:            Simple Quality Assurance Tests for TorXakis
homepage:            https://github.com/TorXakis/TorXakis/                     
license:             BSD3
license-file:        license.txt
author:              Damian Nadales Agut
maintainer:          damian.nadales@gmail.com
copyright:           2017 TNO
category:            Test          
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Examples.All
                     , Examples.Adder  
                     , Examples.Echo
                     , Examples.StimulusResponse
                     , Examples.Paths                     
                     , Sqatt
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , turtle >= 1.4.1
                     , system-filepath
                     , text
                     , mtl
                     , network
                     , async
                     , foldl
                     , silently
                     , process
                     , monad-loops
                     , random
  default-language:    Haskell2010

test-suite qa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Examples.AllSpec
  build-depends:       base
                     , sqatt
                     , hspec
                     , turtle >= 1.4.1
                     , system-filepath                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
