
name:                sqatt
version:             0.1
synopsis:            Simple Quality Assurance Tests for TorXakis
homepage:            https://github.com/TorXakis/TorXakis/
license:             BSD3
license-file:        license.txt
author:              Damian Nadales Agut
maintainer:          damian.nadales@gmail.com
copyright:           2017 TNO
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Examples.All
                     , Sqatt
                     , Benchmarks.All
  other-modules:       Benchmarks.Choice
                     , Benchmarks.Enable
                     , Benchmarks.Common                     
                     , Benchmarks.Hiding
                     , Benchmarks.Parallel
                     , Benchmarks.RealWorld                     
                     , Benchmarks.Sequence
                     , Benchmarks.Synchronization
                     , Examples.Adder
                     , Examples.CustomersOrders
                     , Examples.ControlLoop
                     , Examples.DispatchProcess
                     , Examples.Echo
                     , Examples.LuckyPeople
                     , Examples.MovingArms
                     , Examples.Paths
                     , Examples.Point
                     , Examples.ReadWriteConflict
                     , Examples.Queue
                     , Examples.StimulusResponse
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , hspec
                     , turtle >= 1.4.1
                     , system-filepath
                     , text
                     , mtl
                     , network
                     , async
                     , foldl
                     , process
                     , monad-loops
                     , random
                     , time
                     , extra
  ghc-options:         -Wall -Werror -O
  default-language:    Haskell2010

test-suite qa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Examples.AllSpec
  build-depends:       base
                     , sqatt
                     , hspec
                     , turtle >= 1.4.1
                     , system-filepath
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  default-language:    Haskell2010

test-suite benchmarks-sanity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Benchmarks
  main-is:             TestBenchmarksSanity.hs
  build-depends:       base
                     , sqatt
                     , hspec
                     , turtle >= 1.4.1
                     , system-filepath
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  default-language:    Haskell2010

  
benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             TorXakisBench.hs
  build-depends:       base
                     , criterion
                     , sqatt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TorXakis/TorXakis/
